fixing some searching things in LogException

--- a/InternshipSkeleton/Views/LogException/Index.cshtml
+++ b/InternshipSkeleton/Views/LogException/Index.cshtml
@@ -15,11 +15,10 @@
     var id = Model.PageNumber;
 
     List<SelectListItem> listItems = new List<SelectListItem>();
-    listItems.Add(new SelectListItem { Text = "Time Stamp", Value = "TimeStamp", Selected = ("TimeStamp" == Model.SortBy) });
-    listItems.Add(new SelectListItem { Text = "Method Name", Value = "MethodName", Selected = ("MethodName" == Model.SortBy) });
+    listItems.Add(new SelectListItem { Text = "Time Stamp", Value = "TimeStamp" });
+    listItems.Add(new SelectListItem { Text = "Method Name", Value = "MethodName" });
 
     List<SelectListItem> searchCategories = new List<SelectListItem>();
-    searchCategories.Add(new SelectListItem { Text = "Time Stamp", Value = "TimeStamp" });
     searchCategories.Add(new SelectListItem { Text = "Email Address", Value = "EmailAddress" });
     searchCategories.Add(new SelectListItem { Text = "Message", Value = "Message" });
     searchCategories.Add(new SelectListItem { Text = "Method Name", Value = "MethodName" });
@@ -47,7 +46,6 @@
         @Html.TextBox("id")
     </div>
     <input type="submit" name="btnSubmit" value="Go" class="btn btn-default" />
-
 }
 
 <div>
@@ -56,7 +54,8 @@
                      controllerName: "LogException",
                      routeValues: new { sortBy = sortBy, searchBy = searchBy, searchInput = searchInput, id = ((id - 1) != 0) ? (id - 1) : id },
                      htmlAttributes: null)
-
+</div>
+<div>
     @Html.ActionLink(linkText: "Next",
                      actionName: "Index",
                      controllerName: "LogException",
