--- a/InternshipSkeleton/Views/LogException/Index.cshtml
+++ b/InternshipSkeleton/Views/LogException/Index.cshtml
@@ -17,6 +17,7 @@
     List<SelectListItem> listItems = new List<SelectListItem>();
     listItems.Add(new SelectListItem { Text = "Time Stamp", Value = "TimeStamp" });
     listItems.Add(new SelectListItem { Text = "Method Name", Value = "MethodName" });
+    listItems.Add(new SelectListItem { Text = "Email Address", Value = "EmailAddress" });
 
     List<SelectListItem> searchCategories = new List<SelectListItem>();
     searchCategories.Add(new SelectListItem { Text = "Email Address", Value = "EmailAddress" });
@@ -78,21 +79,25 @@
             <td>Method Name</td>
             <td>Source</td>
             <td>Stack Trace</td>
+            <td>Important</td>
+            <td>Mark as Important</td>
         </tr>
     </thead>
     <tbody>
         @foreach (CombinedLogExceptionDataModel currentRow in Model.Items)
         {
-            <tr>
-                <td>@currentRow.EmailAddress</td>
-                <td>@currentRow.TimeStamp</td>
-                <td>@currentRow.WebRequestID</td>
-                <td>@currentRow.Message</td>
-                <td>@currentRow.MethodName</td>
-                <td>@currentRow.Source</td>
-                <td>@currentRow.StackTrace</td>
-            </tr>
+        <tr>
+            <td>@currentRow.EmailAddress</td>
+            <td>@currentRow.TimeStamp</td>
+            <td>@currentRow.WebRequestID</td>
+            <td>@currentRow.Message</td>
+            <td>@currentRow.MethodName</td>
+            <td>@currentRow.Source</td>
+            <td>@currentRow.StackTrace</td>
+            <td>@currentRow.Important</td>
+            <td>@Html.ActionLink("Mark as Important", "Update")</td>
+
+        </tr>
         }
     </tbody>
 </table>
-
