--- a/InternshipSkeleton/Views/LogControllerAction/Index.cshtml
+++ b/InternshipSkeleton/Views/LogControllerAction/Index.cshtml
@@ -7,35 +7,64 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+@{
+    var searchBy = Model.SearchBy;
+    var searchInput = Model.SearchInput;
+    var sortBy = Model.SortBy;
+    var id = Model.PageNumber;
+
+    List<SelectListItem> listItems = new List<SelectListItem>();
+    listItems.Add(new SelectListItem { Text = "Time Stamp", Value = "TimeStamp" });
+    listItems.Add(new SelectListItem { Text = "Email Address", Value = "EmailAddress" });
+    listItems.Add(new SelectListItem { Text = "Action Name", Value = "ActionName" });
+    listItems.Add(new SelectListItem { Text = "Controller Action", Value = "ControllerAction" });
+    listItems.Add(new SelectListItem { Text = "Parameters", Value = "Parameters" });
+
+    List<SelectListItem> searchCategories = new List<SelectListItem>();
+    searchCategories.Add(new SelectListItem { Text = "Email Address", Value = "EmailAddress" });
+    searchCategories.Add(new SelectListItem { Text = "Action Name", Value = "ActionName" });
+    searchCategories.Add(new SelectListItem { Text = "Controller Action", Value = "ControllerAction" });
+    searchCategories.Add(new SelectListItem { Text = "Parameters", Value = "Parameters" });
+}
+
+@using (Html.BeginRouteForm("Search", new { controller = "LogControllerAction", action = "Index" }))
+{
+    <div>
+        @Html.Label("Sort by: ")
+        @Html.DropDownList("sortBy", listItems)
+    </div>
+    <div>
+        @Html.Label("Search by: ")
+        @Html.DropDownList("searchBy", searchCategories)
+    </div>
+    <div>
+        @Html.Label("Search for: ")
+        @Html.TextBox("searchInput")
+    </div>
+    <div>
+        @Html.Label("Page: ")
+        @Html.TextBox("id")
+    </div>
+    <input type="submit" name="btnSubmit" value="Go" class="btn btn-default" />
+}
 
 <div>
-    <!-- dropdown form to choose how to sort the data -->
-    Sort data by:
-    @{
-        List<SelectListItem> listItems = new List<SelectListItem>();
-        listItems.Add(new SelectListItem { Text = "Time Stamp", Value = "TimeStamp", Selected = ("TimeStamp" == Model.SortBy) });
-        listItems.Add(new SelectListItem { Text = "Action Name", Value = "ActionName", Selected = ("ActionName" == Model.SortBy) });
-    }
-
-    @using (Html.BeginForm("Index", "LogControllerAction", FormMethod.Post, new { id = "sortby", @class = "form-control" }))
-    {
-        @Html.DropDownListFor(m => m.SortBy, listItems, new { onchange = "this.form.submit();" })
-    }
+    @Html.ActionLink(linkText: "Previous",
+                     actionName: "Index",
+                     controllerName: "LogControllerAction",
+                     routeValues: new { sortBy = sortBy, searchBy = searchBy, searchInput = searchInput, id = ((id - 1) != 0) ? (id - 1) : id },
+                     htmlAttributes: null)
 </div>
 <div>
-    <!-- Added link to search the log-->
-    @Html.ActionLink("Search", "Search", "LogControllerAction");
+    @Html.ActionLink(linkText: "Next",
+                     actionName: "Index",
+                     controllerName: "LogControllerAction",
+                     routeValues: new { sortBy = sortBy, searchBy = searchBy, searchInput = searchInput, id = ((id + 1) <= Model.TotalPages) ? (id + 1) : id },
+                     htmlAttributes: null)
 </div>
 
 <div>
     Current Page: @Model.PageNumber/@Model.TotalPages
-</div>
-
-<div>
-    <!-- Previous button - if pagenumber would be 0, stay on same page -->
-    @Html.ActionLink("Previous", "Index", new { @id = ((Model.PageNumber - 1) != 0) ? (Model.PageNumber - 1) : Model.PageNumber });
-    <!-- Next button - if pagenumber would be >totalpages, stay on same page -->
-    @Html.ActionLink("Next", "Index", new { @id = ((Model.PageNumber + 1) <= Model.TotalPages) ? (Model.PageNumber + 1) : Model.PageNumber });
 </div>
 
 <table style="width:100%; text-align:center;">
@@ -48,10 +77,8 @@
             <td>Action Name</td>
             <td>Parameters</td>
         </tr>
-
     </thead>
     <tbody>
-
         @foreach (CombinedLogControllerActionDataModel currentRow in Model.Items)
         {
             <tr>
