--- a/InternshipSkeleton/Views/LogException/Index.cshtml
+++ b/InternshipSkeleton/Views/LogException/Index.cshtml
@@ -14,6 +14,8 @@
     var sortBy = Model.SortBy;
     var id = Model.PageNumber;
 
+    bool noResults = (Model.TotalItems) == 0;
+
     List<SelectListItem> listItems = new List<SelectListItem>();
     listItems.Add(new SelectListItem { Text = "Time Stamp", Value = "TimeStamp" });
     listItems.Add(new SelectListItem { Text = "Method Name", Value = "MethodName" });
@@ -84,36 +86,42 @@
     Current Page: @Model.PageNumber/@Model.TotalPages
 </div>
 
+@if (!noResults)
+{
+    <table style="width:100%; text-align:center;">
+        <thead>
+            <tr>
+                <td>Email Address</td>
+                <td>Time Stamp</td>
+                <td>Web Request ID</td>
+                <td>Message</td>
+                <td>Method Name</td>
+                <td>Source</td>
+                <td>Stack Trace</td>
+                <td>Important</td>
+                <td>Mark as Important</td>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (CombinedLogExceptionDataModel currentRow in Model.Items)
+            {
+                <tr>
+                    <td>@currentRow.EmailAddress</td>
+                    <td>@currentRow.TimeStamp</td>
+                    <td>@currentRow.WebRequestID</td>
+                    <td>@currentRow.Message</td>
+                    <td>@currentRow.MethodName</td>
+                    <td>@currentRow.Source</td>
+                    <td>@currentRow.StackTrace</td>
+                    <td>@currentRow.Important</td>
+                    <td>@Html.ActionLink("Mark as Important", "Update")</td>
+                </tr>
+            }
+        </tbody>
+    </table>
+}
+else
+{
+    <h2> No results found. </h2>
+}
 
-<table style="width:100%; text-align:center;">
-    <thead>
-        <tr>
-            <td>Email Address</td>
-            <td>Time Stamp</td>
-            <td>Web Request ID</td>
-            <td>Message</td>
-            <td>Method Name</td>
-            <td>Source</td>
-            <td>Stack Trace</td>
-            <td>Important</td>
-            <td>Mark as Important</td>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (CombinedLogExceptionDataModel currentRow in Model.Items)
-        {
-        <tr>
-            <td>@currentRow.EmailAddress</td>
-            <td>@currentRow.TimeStamp</td>
-            <td>@currentRow.WebRequestID</td>
-            <td>@currentRow.Message</td>
-            <td>@currentRow.MethodName</td>
-            <td>@currentRow.Source</td>
-            <td>@currentRow.StackTrace</td>
-            <td>@currentRow.Important</td>
-            <td>@Html.ActionLink("Mark as Important", "Update")</td>
-
-        </tr>
-        } 
-    </tbody>
-</table>
