--- a/InternshipSkeleton/Views/LogWebRequest/Index.cshtml
+++ b/InternshipSkeleton/Views/LogWebRequest/Index.cshtml
@@ -31,23 +31,23 @@
 @using (Html.BeginRouteForm("Search", new { controller = "LogWebRequest", action = "Index" }))
 {
     <div class="container">
-        <div class="block">
+        <div class="block" style="width: 20% !important; display: inline;">
             @Html.Label("Sort by: ")
             @Html.DropDownList("sortBy", listItems)
         </div>
-        <div class="block">
+        <div class="block" style="width: 20% !important; display: inline;">
             @Html.Label("Search by: ")
             @Html.DropDownList("searchBy", searchCategories)
         </div>
-        <div class="block">
+        <div class="block" style="width: 20% !important; display: inline;">
             @Html.Label("Search for: ")
             @Html.TextBox("searchInput")
         </div>
-        <div class="block">
+        <div class="block" style="width: 20% !important; display: inline;">
             @Html.Label("Page: ")
             @Html.TextBox("id")
         </div>
-        <input type="submit" name="btnSubmit" value="Go" class="btn btn-default" />
+        <input type="submit" name="btnSubmit" value="Go" class="btn btn-default" style="width: 20% !important; display:inline;" />
     </div>
 }
 
