Made paging and search changes for LogWebResponse

--- a/InternshipSkeleton/Views/LogWebResponse/Index.cshtml
+++ b/InternshipSkeleton/Views/LogWebResponse/Index.cshtml
@@ -7,36 +7,81 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div>
-    <!-- dropdown form to choose how to sort the data -->
-    Sort data by:
-    @{
-        List<SelectListItem> listItems = new List<SelectListItem>();
-        listItems.Add(new SelectListItem { Text = "Time Stamp", Value = "TimeStamp", Selected = ("TimeStamp" == Model.SortBy) });
-    }
+@{
+    var searchBy = Model.SearchBy;
+    var searchInput = Model.SearchInput;
+    var sortBy = Model.SortBy;
+    var id = Model.PageNumber;
 
-    @using (Html.BeginForm("Index", "LogWebResponse", FormMethod.Post, new { id = "sortby", @class = "form-control" }))
-    {
-        @Html.DropDownListFor(m => m.SortBy, listItems, new { onchange = "this.form.submit();" })
-    }
+    bool noResults = (Model.TotalItems) == 0;
+
+    List<SelectListItem> listItems = new List<SelectListItem>();
+    listItems.Add(new SelectListItem { Text = "Time Stamp", Value = "TimeStamp" });
+    listItems.Add(new SelectListItem { Text = "Status", Value = "Status" });
+    listItems.Add(new SelectListItem { Text = "Email Address", Value = "EmailAddress" });
+
+    List<SelectListItem> searchCategories = new List<SelectListItem>();
+    searchCategories.Add(new SelectListItem { Text = "Email Address", Value = "EmailAddress" });
+    searchCategories.Add(new SelectListItem { Text = "Status", Value = "Status" });
+
+}
+
+@using (Html.BeginRouteForm("Search", new { controller = "LogWebResponse", action = "Index" }))
+{
+    <div class="container">
+        <div class="block" style="width: 20% !important; display: inline;">
+            @Html.Label("Sort by: ")
+            @Html.DropDownList("sortBy", listItems)
+        </div>
+        <div class="block" style="width: 20% !important; display: inline;">
+            @Html.Label("Search by: ")
+            @Html.DropDownList("searchBy", searchCategories)
+        </div>
+        <div class="block" style="width: 20% !important; display: inline;">
+            @Html.Label("Search for: ")
+            @Html.TextBox("searchInput")
+        </div>
+        <div class="block" style="width: 20% !important; display: inline;">
+            @Html.Label("Page: ")
+            @Html.TextBox("id")
+        </div>
+        <input type="submit" name="btnSubmit" value="Go" class="btn btn-default" style="width: 20% !important; display: inline;" />
+    </div>
+}
+
+<div>
+    @Html.ActionLink(linkText: "Previous",
+                        actionName: "Index",
+                        controllerName: "LogWebResponse",
+                        routeValues: new
+                            {
+                                sortBy = sortBy,
+                                searchBy = searchBy,
+                                searchInput = searchInput,
+                                id = ((id - 1) != 0) ? (id - 1) : id
+                            },
+                        htmlAttributes: null)
 </div>
-
 <div>
-    <!-- Added link to search the log-->
-    @Html.ActionLink("Search", "Search", "LogWebResponse");
+    @Html.ActionLink(linkText: "Next",
+                        actionName: "Index",
+                        controllerName: "LogWebResponse",
+                        routeValues: new
+                            {
+                                sortBy = sortBy,
+                                searchBy = searchBy,
+                                searchInput = searchInput,
+                                id = ((id + 1) <= Model.TotalPages) ? (id + 1) : id
+                            },
+                        htmlAttributes: null)
 </div>
 
 <div>
     Current Page: @Model.PageNumber/@Model.TotalPages
 </div>
 
-<div>
-    <!-- Previous button - if pagenumber would be 0, stay on same page -->
-    @Html.ActionLink("Previous", "Index", new { @id = ((Model.PageNumber - 1) != 0) ? (Model.PageNumber - 1) : Model.PageNumber });
-    <!-- Next button - if pagenumber would be >totalpages, stay on same page -->
-    @Html.ActionLink("Next", "Index", new { @id = ((Model.PageNumber + 1) <= Model.TotalPages) ? (Model.PageNumber + 1) : Model.PageNumber });
-</div>
-
+@if (!noResults)
+{
 <table style="width:100%; text-align:center;">
     <thead>
         <tr>
@@ -62,4 +107,8 @@
         }
     </tbody>
 </table>
-
+}
+else
+{
+    <h2>No results found. </h2>
+}
